# shorts

./: CMakelists.txt  README.md  imgui.ini  main.cpp  test.npy
GPT3_discord_bot/: README.md  chatGPT.py  main.py
NN/: basic.ipynb  main.py
Wordle/: .gitignore  README.md  main.py
bouncy_density_circle/: CMakeLists.txt  bouncy_density_circle.cu
conways game of life/: main.py
discrete_maths/: data.py  dijkstras.py  main.py  prims.py  simplex.py
fft_drawing/: main.py
fluids/CFDpython_LorenaA/: 1d fluid sim.py  2d diffusion.py  RTfluid.py  burgers equation.py  main.py
fluids/control_volumes/: 3d.py  sim.py
heat_equations/: zheat.py
math_library/: CAS1.py  CAS2.py  conversion.py  exceptions.py  functions.py  matrix.py  objects.py  quaternion.py  vector2.py  vector3.py
miscellaneous/: bogosort.py  img.py  mandelbrot.py  palindrome.py  pascal.py
neural_networks/examples/: 1.py  2.py  tf.py
object_detection/: ArduinoCOM.py  kinect.py  main.py  test.py
old/: 2048.py
pendulums/: doublependulum.py  elasticpendulum.py  main.py  pendulum.py  utils.py
physics-engine/: README.md  functions.py  main.py  material.py  maths.py  mesh.py  objects.py  rigidbody.py  robot.py  simple.py  speedtest.py  test.py
physics-engine/objects/: camera.py  cuboid.py  display.py  line.py  plane.py
pi_collisions/: main.py
reaction-diffusion-vis/: .gitignore  imgui.ini  main.cpp
reaction-diffusion-vis/shaders/: pass_vert.glsl  rd_visual.glsl  transform_frag.glsl
shaders/: rd_compute.glsl  rd_frag.glsl  rd_visual.glsl
smooth_transition_functions/: 1d.py
